--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>piaic html assignment </title>
+    <title>contact us</title>
     <style>
-        *{
+         *{
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -62,40 +61,8 @@
             text-decoration: none;
             color: #000;
         }
-        .image1{
-            display: flex;
-            /* border: 3px solid red; */
-            align-items: center;
-            justify-content: center;
-        }
-
-        .image1 img{
-            width: 90%;
-            height: 400px;
-        }
-        .p1{
-            /* border: 3px solid red; */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 30px 55px;
-        }
-        .p1 p{
-            font-size: 35px;
-        }
-        .fotter{
-            border: 3px solid rgb(19, 18, 18);
-            border-radius: 10px;
-            text-align: center;
-            font-size: 30px;
-            padding: 10px;
-            background-color: #beef00;
-            margin: 3px 50px ;
-
-        }
     </style>
 </head>
-
 <body>
     <div class="navBAr">
         <div class="logo"><img src="/logo.png" alt="PANDA CLOUD"> </div>
@@ -108,26 +75,5 @@
             </ul>
         </div>
 
-    </div>
-    <div class="image1">
-    <img src="/image1.png" alt="image1">
-    </div>
-    <div class="p1">
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, asperiores sed nesciunt rem 
-             accusantium inventore corporis, quas quam labore veniam doloribus suscipit sequi eius? Dolores 
-             deleniti assumenda quo rerum ipsa? Iure cum corrupti alias! Asperiores quidem quas ullam dolorum
-              aliquid eaque animi fugiat odio quae distinctio ipsum, et ipsa sit.
-
-        </p>
-        
-    </div>
-    <footer>
-        <div class="fotter">
-            Copyright &copy; www.fitsaleem.com. All rights reserved! 
-        </div>
-    </footer>
-
 </body>
-
 </html>
